# claimcheck

./: .gitignore  LICENSE  MANIFEST.in  README.md  WRITEUP.md  ci-baseline.json  pyproject.toml
.github/workflows/: ci.yml
assets/: architecture.mmd
claimcheck/: __init__.py  agent.py  buggy_adapter.py  cli.py  corpus.py  dataset.py  deterministic.py  drift.py  gating.py  metrics.py  report.py  retrieval.py  runner.py  schema.py
claimcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
claimcheck/judges/: __init__.py  calibration.py  client.py  rubric_judge.py
corpus/: manifest.json  stripe_docs.jsonl
data/calibration/: human_labels.jsonl
data/golden/: frozen.jsonl  living.jsonl
data/golden_buggy/: regressions.jsonl
data/known_gaps/: limits.jsonl
examples/: github-actions.yml  real_judge_adapter.py  real_reviewer_adapter.py
tests/: conftest.py  test_deterministic.py  test_end_to_end.py  test_gating_and_drift.py  test_hardening.py  test_retrieval_and_judge.py  test_schema.py
